--- a/gb/20/1/25/n11819471.md
+++ b/gb/20/1/25/n11819471.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/sifwto368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sifwto368/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/sifwto368/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sifwto368/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/sifwto368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sifwto368/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/sifwto368/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sifwto368/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/sifwto368/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sifwto368/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/sifwto368/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sifwto368/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/sifwto368/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sifwto368/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/sifwto368/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sifwto368/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/sifwto368/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/sifwto368/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/sifwto368/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/sifwto368/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/sifwto368/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/sifwto368/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/sifwto368/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/sifwto368/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>古生物学家感佩神韵传递真相：做得真棒！</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/200124191657976-600x400.jpg" />
 <h6>2020年1月24日，古生物学家Chris Tait（右）和朋友Rachael Hill在伦敦Eventim Apollo剧院观看神韵。（肖悯／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年01月25日讯】（大纪元记者肖悯英国伦敦报导）2020年1月24日，<ahref="https://github.com/sifwto368/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>国际艺术团在伦敦Eventim Apollo剧院的第八场演出，让观众们在如诗如画的文化盛宴中心驰神往，古生物学家Chris Tait赞叹道：“我太喜欢了！”</p>
-<p>Chris Tait是一名古生物学家，也是英国最大的化石狩猎协会，英国化石猎人协会（UKAFH）的英格兰南部负责人。他和朋友Rachael Hill一起观看<ahref="https://github.com/sifwto368/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>后都非常喜欢，</p>
+	<p>【大纪元2020年01月25日讯】（大纪元记者肖悯英国伦敦报导）2020年1月24日，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>国际艺术团在伦敦Eventim Apollo剧院的第八场演出，让观众们在如诗如画的文化盛宴中心驰神往，古生物学家Chris Tait赞叹道：“我太喜欢了！”</p>
+<p>Chris Tait是一名古生物学家，也是英国最大的化石狩猎协会，英国化石猎人协会（UKAFH）的英格兰南部负责人。他和朋友Rachael Hill一起观看<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>后都非常喜欢，</p>
 <p>Tait表示演出中表现法轮功学员反迫害的节目很好，他说：“传递（出中国的）现实信息，做得真棒，我非常喜欢；（这个节目）给我留下了最深刻的印象！”</p>
 <p>他对演出称赞不已，“舞蹈编排的方式，所有人的同时起舞，看起来着实是蔚为壮观。”</p>
 <p>Hill也称赞道：“完美。利用特效让演员可以自由进出背景和舞台，太令人难以置信了，我完全没想到会是这样，真的非常感谢有机会能看到！”</p>
 <p>神韵中西乐器合璧的交响乐团现场演奏也吸引了他们，Tait说：“非常好，十分振奋，也很祥和，我太喜欢了。”Hill也称赞道：“大气磅礴，非常棒。”</p>
-<p>她还说：“特别是歌唱的部分，很像歌剧的唱法，（歌词）极具<ahref="https://github.com/sifwto368/djy/blob/master/gb/tag/%E7%B2%BE%E7%A5%9E%E5%86%85%E6%B6%B5.md#1">精神内涵</a>。”</p>
-<p>神韵所传递的<ahref="https://github.com/sifwto368/djy/blob/master/gb/tag/%E7%B2%BE%E7%A5%9E%E5%86%85%E6%B6%B5.md#1">精神内涵</a>让Tait很有感触，他说：“我的确感受到了一种能量，我发现这是一个非常积极的体验。”Hill也说，“是的，非常幸福！”</p>
-<p>神韵的<ahref="https://github.com/sifwto368/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%8F%A4%E5%85%B8%E8%88%9E.md#1">中国古典舞</a>极具表现力，Tait表示说：“我全部都能看明白，即便没有一句话，但我能看懂足够多的内涵。”</p>
+<p>她还说：“特别是歌唱的部分，很像歌剧的唱法，（歌词）极具<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%B2%BE%E7%A5%9E%E5%86%85%E6%B6%B5.md#1">精神内涵</a>。”</p>
+<p>神韵所传递的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%B2%BE%E7%A5%9E%E5%86%85%E6%B6%B5.md#1">精神内涵</a>让Tait很有感触，他说：“我的确感受到了一种能量，我发现这是一个非常积极的体验。”Hill也说，“是的，非常幸福！”</p>
+<p>神韵的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%8F%A4%E5%85%B8%E8%88%9E.md#1">中国古典舞</a>极具表现力，Tait表示说：“我全部都能看明白，即便没有一句话，但我能看懂足够多的内涵。”</p>
 <p>Hill赞同道：“确实能看懂。整体感觉非常棒！”</p>
 <p>责任编辑：胡明</p>
 	
@@ -22,44 +22,43 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/1/23/n11817088.md#1">英国防部航天航空专家：神韵艺术家是榜样</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/1/24/n11817160.md#1">音乐制作人盛赞神韵 富有文化气息令人沉醉</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/1/24/n11817297.md#1">神韵舞蹈精准完美 舞蹈编导激赏太了不起了</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/1/24/n11817376.md#1">神韵中西乐器水乳交融 乐队指挥陶醉震撼</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/1/24/n11817418.md#1">受神韵启迪 跨国集团总监深信创世主救人</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/1/24/n11817453.md#1">喜观天人合一 法官着迷于神韵 叹非常精彩</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/23/n11817088.md#1">英国防部航天航空专家：神韵艺术家是榜样</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/24/n11817160.md#1">音乐制作人盛赞神韵 富有文化气息令人沉醉</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/24/n11817297.md#1">神韵舞蹈精准完美 舞蹈编导激赏太了不起了</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/24/n11817376.md#1">神韵中西乐器水乳交融 乐队指挥陶醉震撼</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/24/n11817418.md#1">受神韵启迪 跨国集团总监深信创世主救人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/24/n11817453.md#1">喜观天人合一 法官着迷于神韵 叹非常精彩</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/4/n9921539.md#1" target="_blank">尹曙生：产粮大省为何饿死人</a></li><li><a href="https://github.com/sifwto368/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/11/n10845276.md#1" target="_blank">这些前中共媒体人的见证</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/24/n11208751.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(4)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/20/n8510885.md#1" target="_blank">哈尔滨一位大学教师17年的坚持</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/12/15/n12621699.md#1">印裔占星师分析 川普未来一个月如何逆转胜</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/12/14/n12619436.md#1">庚子冬至木土合相 太史公和星象师有说道</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/10/3/n12449869.md#1">《圣经》与《推背图》预言的应验与变换10</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/12/11/n12614366.md#1">尼姑癌症末期意外痊愈 修炼为何能改善疾病？</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/12/1/n12587271.md#1">人长猪蹄 猪长人手 见证人畜间轮回转生</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/12/18/n12628970.md#1">【思想领袖】弗林：我被“埋入”地下六尺</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/12/18/n12631030.md#1">【新闻看点】民主党背水战 国防部暂停拜登过渡</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/12/19/n12631673.md#1">【西岸观察】五角大楼暂停交接透露啥讯息？</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/12/18/n12630646.md#1">密歇根一县大选夜报拜登赢 重计票确认川普胜</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/12/18/n12628817.md#1">【秦鹏直播】闭门会议？首席大法官被架火上烤</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/12/18/n12629232.md#1">白宫网站请愿：请总统下令戒严拯救国家</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/12/18/n12630930.md#1">章子怡机场一人带两娃 醒醒对着镜头打招呼</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/12/18/n12630664.md#1">挺过2020年 台湾演艺圈十大话题</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/12/16/n12625338.md#1">《神力女超人1984》影评：一流英雄片</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/12/18/n12629894.md#1">林志玲吃胖有原因 喊话“小天使快报名”</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/12/17/n12628248.md#1">晒孙俪超大幅书法作品 邓超搞笑演绎五体投地</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/13/2/9/n3797754.md#1">这种飞蚊症不用怕！2招改善 赶走恼人飞蚊</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/12/17/n12626693.md#1">冬至“开运”民俗有哪些？</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/12/17/n12628167.md#1">苦味护心、酸味改善自律神经 一篇看懂五味功效</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/12/20/n12633276.md#1">木星土星大合相 《圣经》中圣诞之星现身？</a></li>
-<li><a href="https://github.com/sifwto368/djy/blob/master/gb/20/12/17/n12627841.md#1">职场管理小故事：为善不欲人知的长官</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/sifwto368/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/sifwto368/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/25/n11819471.htm">古生物学家感佩神韵传递真相：做得真棒！</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/25/n11819471.htm">古生物学家感佩神韵传递真相：做得真棒！</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/sifwto368/djy/blob/master/gb/20/1/25/n11819471.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/sifwto368/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/sifwto368/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/sifwto368/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/sifwto368/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/sifwto368/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/sifwto368/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/sifwto368/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/sifwto368/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/sifwto368/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/sifwto368/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/sifwto368/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/sifwto368/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/sifwto368/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/sifwto368/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/sifwto368/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/sifwto368/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/sifwto368/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/sifwto368/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/sifwto368/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/sifwto368/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/sifwto368/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/sifwto368/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/sifwto368/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/sifwto368/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sifwto368/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/1/25/n11819471.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
